2020-10-31  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/texi2any.pl: Rename two variables.

2020-10-28  Gavin Smith  <gavinsmith0123@gmail.com>

	Do not set expanded_formats via parser.

	* tp/Texinfo/Convert/Converter.pm (converter): Do not copy
	'expanded_formats' from parser object to converter object.
	* tp/texi2any.pl: Copy 'expanded_formats' from parser object
	to converter object.

2020-10-28  Gavin Smith  <gavinsmith0123@gmail.com>

	Do not set include_directories via parser.

	* tp/Texinfo/Convert/Converter.pm (converter): Do not copy
	'include_directories' from parser object to converter object.

	* tp/texi2any.pl: Add include directories to parser options
	and converter options separately.
	* tp/t/test_utils.pl: Set 'include_directories' in converter
	options explicitly.

	This should make it clearer where the 'include_directories'
	setting comes from.  Ideally the parser object should be used
	to access the results of parsing only, not to access parser
	settings.

2020-10-28  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/XS/parsetexi/Parsetexi.pm (parser):
	Add a comment about copying the conf to the parser object.

2020-10-28  Gavin Smith  <gavinsmith0123@gmail.com>

	Only call do_index_keys with converter object.

	* tp/t/test_utils.pl, tp/t/test_sort.t:
	Call Texinfo::Structuring::sort_indices with converter object
	rather than parser object.
	* tp/Texinfo/Convert/Text.pm: use Texinfo::Convert::Converter.
	* tp/Texinfo/Structuring.pm (do_index_keys): Update comment.

	This means that index sorting errors disappear from
	$result_errors, but they are still present in the converter
	errors.

2020-10-28  Gavin Smith  <gavinsmith0123@gmail.com>

	Provide accesskey in section TOC.

	* tp/Texinfo/Convert/HTML.pm: Output accesskey attribute on <a>
	elements in section TOC, as is done for menus.

2020-10-27  Patrice Dumas  <pertusus@free.fr>

	Fix messages. Do not warn if up node is an external node and inconsistent with menu
